--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,30 +30,37 @@
     flex-direction: row-reverse;
     gap: 15px;
 }
+
 .productCarousel.carousel-root .carousel {
     width: auto;
 }
+
 .productCarousel.carousel-root .carousel.carousel-slider {
     width: 100%;
 }
+
 .productCarousel.carousel-root .carousel.carousel-slider .slider-wrapper {
     border-radius: 10px;
 }
+
 .productCarousel.carousel-root .carousel .thumbs-wrapper {
     margin: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb {
     height: 60px;
     border-radius: 6px;
     overflow: hidden;
     position: relative;
 }
+
 .productCarousel.carousel-root .carousel .thumb img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
+
 .productCarousel.carousel-root .carousel .thumb:after {
     content: "";
     width: 100%;
@@ -64,26 +71,32 @@
     background-color: black;
     opacity: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb.selected,
 .productCarousel.carousel-root .carousel .thumb:hover {
     border: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb:hover:after,
 .productCarousel.carousel-root .carousel .thumb.selected:after {
     opacity: 0.2;
 }
+
 .productCarousel .control-arrow {
     display: none;
 }
+
 @media screen and (max-width: 767px) {
     .productCarousel.carousel-root {
         flex-direction: column;
     }
+
     .productCarousel.carousel-root .carousel .thumb {
         border: 0;
         padding: 0;
     }
 }
+
 @media screen and (min-width: 768px) {
     .productCarousel.carousel-root .carousel .thumbs {
         transform: none !important;
@@ -91,12 +104,14 @@
         display: flex;
         gap: 10px;
     }
+
     .productCarousel.carousel-root .carousel .thumb {
         border: 0;
         padding: 0;
         margin: 0;
     }
 }
+
 /* PRODUCT DETAILS CAROUSEL STYLING CUSTOMIZATION END */
 
 .markdown ul {
@@ -105,6 +120,11 @@
     list-style-type: disc;
     margin: 20px 0;
 }
+
 .markdown ul li {
     margin: 10px 0;
+}
+
+.hero-pattern {
+    background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
